[package]
description  = "Bitdrift objc crate"
edition      = "2021"
license-file = "LICENSE"
name         = "swift_bridge"
publish      = false
version      = "1.0.0"

[dependencies]
ahash.workspace              = true
anyhow.workspace             = true
async-trait.workspace        = true
bd-api.workspace             = true
bd-bonjson.workspace         = true
bd-bonjson-ffi.workspace     = true
bd-client-common.workspace   = true
bd-device.workspace          = true
bd-error-reporter.workspace  = true
bd-key-value.workspace       = true
bd-log.workspace             = true
bd-log-primitives.workspace  = true
bd-logger.workspace          = true
bd-noop-network.workspace    = true
bd-proto.workspace           = true
bd-report-parsers.workspace  = true
bd-report-writer.workspace   = true
bd-runtime.workspace         = true
bd-session.workspace         = true
bd-time.workspace            = true
log.workspace                = true
objc.workspace               = true
parking_lot.workspace        = true
platform-shared.workspace    = true
protobuf.workspace           = true
time.workspace               = true
tokio.workspace              = true
tracing-subscriber.workspace = true
uuid.workspace               = true

[dev-dependencies]
bd-test-helpers.workspace   = true
pretty_assertions.workspace = true

[features]
cargo-clippy = []
