[package]
description  = "test JNI crate"
edition      = "2021"
license-file = "LICENSE"
name         = "test_jni"
publish      = false
version      = "1.0.0"

[lib]
# Build as a dynamic library named "capture" so it can be loaded by System.loadLibrary("capture")
crate-type = ["cdylib"]
name       = "capture"

[dependencies]
anyhow                   = { workspace = true }
assert_matches.workspace = true
bd-client-common         = { workspace = true }
bd-error-reporter        = { workspace = true }
bd-log                   = { workspace = true }
bd-logger                = { workspace = true }
bd-proto                 = { workspace = true }
bd-test-helpers          = { workspace = true }
capture-core             = { path = "../../../platform/jvm/core" }
ctor                     = { workspace = true }
jni.workspace            = true
platform-shared          = { path = "../../../platform/shared" }
platform_test_helpers    = { path = "../../../platform/test_helpers" }
time.workspace           = true
