[package]
description  = "test swift crate"
edition      = "2021"
license-file = "LICENSE"
name         = "test_swift_bridge"
publish      = false
version      = "1.0.0"

[dependencies]
bd-bonjson                = { workspace = true }
bd-bonjson-ffi            = { workspace = true }
bd-client-common          = { workspace = true }
bd-error-reporter         = { workspace = true }
bd-key-value              = { workspace = true }
bd-logger                 = { workspace = true }
bd-proto                  = { workspace = true }
bd-test-helpers           = { workspace = true }
ctor                      = { workspace = true }
objc.workspace            = true
objc-foundation.workspace = true
platform_test_helpers     = { path = "../../../../platform/test_helpers" }
protobuf.workspace        = true
swift_bridge              = { path = "../../../../platform/swift/source" }
time.workspace            = true

[features]
cargo-clippy = []
